[gd_scene load_steps=5 format=3 uid="uid://cqpojv4dvmyq4"]

[ext_resource type="Script" uid="uid://d3ftu1nxhawbd" path="res://scene/main/element_list_element_ui.gd" id="1_r0g3g"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dsxwx"]
bg_color = Color(0.21568628, 0.30980393, 0.4, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.15294118, 0.15294118, 0.15294118, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r0g3g"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.10196078, 0.10196078, 0.10196078, 1)
border_width_bottom = 2
border_color = Color(0, 0, 0, 0.6)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dsxwx"]

[node name="Panel" type="Panel"]
clip_contents = true
custom_minimum_size = Vector2(0, 50)
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_dsxwx")
script = ExtResource("1_r0g3g")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.009473684
anchor_top = 0.1
anchor_right = 0.99
anchor_bottom = 0.9
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "Name"
vertical_alignment = 1
text_overrun_behavior = 3
metadata/_edit_use_anchors_ = true

[node name="LineEdit" type="LineEdit" parent="."]
visible = false
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 17.0
offset_top = -23.0
offset_right = -17.0
offset_bottom = 23.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxFlat_r0g3g")
theme_override_styles/focus = SubResource("StyleBoxEmpty_dsxwx")

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
flat = true

[node name="Doubel" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Menu" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 2

[node name="Move" type="Button" parent="Menu/HBoxContainer"]
custom_minimum_size = Vector2(64.375, 0)
layout_mode = 2
text = "顺序"

[node name="SpinBox" type="SpinBox" parent="Menu/HBoxContainer/Move"]
visible = false
layout_mode = 0
offset_right = 64.375
offset_bottom = 50.0
rounded = true
allow_greater = true
allow_lesser = true
custom_arrow_step = 1.0

[node name="CopyPaste" type="Button" parent="Menu/HBoxContainer"]
layout_mode = 2
text = "复制"

[node name="Remove" type="Button" parent="Menu/HBoxContainer"]
layout_mode = 2
text = "删除"

[connection signal="focus_exited" from="LineEdit" to="." method="_on_line_edit_focus_exited"]
[connection signal="text_submitted" from="LineEdit" to="." method="_on_line_edit_text_submitted"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="timeout" from="Doubel" to="." method="_on_doubel_timeout"]
[connection signal="pressed" from="Menu/HBoxContainer/Move" to="." method="_on_move_pressed"]
[connection signal="value_changed" from="Menu/HBoxContainer/Move/SpinBox" to="." method="_on_spin_box_value_changed"]
[connection signal="pressed" from="Menu/HBoxContainer/CopyPaste" to="." method="_on_copy_paste_pressed"]
[connection signal="pressed" from="Menu/HBoxContainer/Remove" to="." method="_on_remove_pressed"]
